--- a/entypo.css
+++ b/entypo.css
@@ -21,17 +21,27 @@
 }
 
 .entypo {
-	font-family: 'EntypoRegular';
-	font-size: 2em;
-	font-weight: normal;
-	line-height: 0;
+    font-family: 'EntypoRegular';
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .entypo-social {
-	font-family: 'EntypoSocialRegular';
-	font-size: 2em;
-	font-weight: normal;
-	line-height: 0;
+    font-family: 'EntypoSocialRegular';
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .entypo.phone:before{ content:'\1F4DE'; }
