Added vertical alignment.

--- a/entypo.css
+++ b/entypo.css
@@ -26,7 +26,8 @@
 	font-weight: normal;
 	line-height: 0;
     position: relative;
-    top: 3px;
+    top: 1px;
+    vertical-align: text-top;
 }
 
 .entypo-social {
@@ -35,7 +36,8 @@
 	font-weight: normal;
 	line-height: 0;
     position: relative;
-    top: 3px;
+    top: 1px;
+    vertical-align: text-top;
 }
 
 .entypo.phone:before{ content:'\1F4DE'; }
